<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <RelativeLayout
                android:id="@+id/image_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/niche_grade_content"
                    android:src="@drawable/niche_circle" />

                <TextView
                    android:id="@+id/grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAppearance = "@style/Base.TextAppearance.AppCompat.Large"
                    android:text="A+"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/college_name"
                android:paddingStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/error"
                android:textColor="@color/colorTextSecondary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:autoSizeTextType="uniform"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/image_wrapper"
                android:layout_below="@id/college_name">

                <TextView
                    android:id="@+id/college_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat_range"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/college_acceptance_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acceptance_rate"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/college_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/college_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/college_act_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ACT Range:"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>